--- a/app/views/campaigns/works.html.erb
+++ b/app/views/campaigns/works.html.erb
@@ -5,7 +5,7 @@
 
 	<body>
 		<div style="margin-left: 400px;">
-			<%= image_tag "how-works.png" %>
+			<%= image_tag "howworks.png" %>
 		</div>
 	</body>
 </html>
